hds: remove finalizer from NDFNdxHandler
Finalizers are evil and deprecated for removal in Java 21.
This one can be easily replaced using Cleaner.